examples/invalid/var_indexing.ms
MainPrgm empty;
Var

let x: Int = (1+1);
let b: Int = (-1);

BeginPg
{
    x := 2 * (x + 1);
    for x from 1 to 10 step 2 {
        for x from 1 to 10 step 2 {
            
        }
    }
}
EndPg;